# QuickEdits

./: CMakeLists.txt  ColorPicker.qml  Main.qml  imageexporter.cpp  imageexporter.h  index.html  main.cpp
.gitea/workflows/: deploy-pages.yml
.github/workflows/: build.yml  deploy-pages.yml  release.yml
include/: filehandler.h  fontmanager.h  imageexporter.h  usersettings.h
qml/: AnchorsButton.qml  ColorPicker.qml  CustomColorDialog.qml  DonatePopup.qml  DownloadPopup.qml  FontManagerDialog.qml  Main.qml  MaterialButton.qml  SaveNamingDialog.qml
qml/Singletons/: Colors.qml  Constants.qml  UserSettings.qml
resources/fonts/: fonts.qrc
resources/icons/: icons.qrc
src/: filehandler.cpp  fontmanager.cpp  imageexporter.cpp  main.cpp  usersettings.cpp
